WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
164381
REGRESSION (
r207669
): Crash under media controls shadow root construction
https://bugs.webkit.org/show_bug.cgi?id=164381
Summary
REGRESSION (r207669): Crash under media controls shadow root construction
Antti Koivisto
Reported
2016-11-03 15:53:00 PDT
Media controls run scripts inHTMLMediaElement::insertedInto
Attachments
patch
(5.53 KB, patch)
2016-11-03 16:16 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch
(5.51 KB, patch)
2016-11-03 16:19 PDT
,
Antti Koivisto
simon.fraser
: review+
Details
Formatted Diff
Diff
patch
(4.72 KB, patch)
2016-11-03 21:51 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2016-11-03 15:53:28 PDT
<
rdar://problem/28935401
>
Antti Koivisto
Comment 2
2016-11-03 16:16:40 PDT
Created
attachment 293819
[details]
patch
Antti Koivisto
Comment 3
2016-11-03 16:19:40 PDT
Created
attachment 293823
[details]
patch
Antti Koivisto
Comment 4
2016-11-03 21:51:18 PDT
Created
attachment 293860
[details]
patch
Antti Koivisto
Comment 5
2016-11-03 22:11:59 PDT
https://trac.webkit.org/r208370
Alexey Proskuryakov
Comment 6
2016-11-16 15:02:37 PST
***
Bug 164774
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug